# BuLangVM

./: .gitignore  API.md  BUILTIN_METHODS.md  BULANG_SYNTAX_REFERENCE.md  CMakeLists.txt  INHERITANCE_ANALYSIS.md  INHERITANCE_TRUTH.md  MODTODO  MULTI_RETURN.md  OPTIMIZATIONS.md  PATCH_INCREMENT_FIX.md  README.md  REAME.md  RUNTIME_DETECTION.md  SYNTAX.md  TODO  VM_DISPATCH_ANALYSIS.md  leak_analyzer.py  main.bu  main.dump  snuggly-conjuring-leaf.md  symbolize.py  test_prefix_debug  test_prefix_debug.cpp  test_simple.bu
BuBox2D/: CMakeLists.txt
BuBox2D/src/: bindings.cpp  bindings.hpp  plugin.cpp
BuGLFW/: CMakeLists.txt
BuGLFW/src/: bidings.cpp  bidings.hpp  bindings.cpp  bindings.hpp  context.cpp  core.cpp  input.cpp  main.cpp  monitor.cpp  plugin.cpp  rlgl.cpp  window.cpp
BuGTK/: CMakeLists.txt
BuGTK/src/: bindings.cpp  bindings.hpp  plugin.cpp
BuImGui/: CMakeLists.txt
BuImGui/src/: bindings.cpp  bindings.hpp  plugin.cpp
BuOgre3D/: CMakeLists.txt
BuOgre3D/src/: bindings.cpp  bindings.hpp  plugin.cpp
BuRay/: CMakeLists.txt
BuRay/src/: audio.cpp  bidings.cpp  bidings.hpp  bindings.cpp  bindings.hpp  camera.cpp  core.cpp  input.cpp  main.cpp  models.cpp  plugin.cpp  rlgl.cpp  shapes.cpp  structs.cpp  text.cpp  textures.cpp
BuRlGl/: CMakeLists.txt
BuRlGl/src/: bindings.cpp  bindings.hpp  plugin.cpp  rlgl.h
BuSDL/: CMakeLists.txt
BuSDL/src/: bidings.cpp  bidings.hpp  bindings.cpp  bindings.hpp  core.cpp  imopengl.cpp  main.cpp  opengl.cpp  plugin.cpp  renderer.cpp  rlgl.cpp  window.cpp
_tests/: CMakeLists.txt
_tests/src/: main.cpp
bnf/: Parser.h  language.bnf
bu/: CMakeLists.txt
bu/src/: main.cpp
bulang/: CMakeLists.txt  bulang-0.1.1.vsix  bulang-0.1.3.vsix
bulang-playground/: play.py
bulang-playground/playground/: bulang.js  bulang.wasm
bulang-playground/src/: main.cpp
bulang-web/: build.py  playground.py  shell.html
bulang-web/assets/: config.json  main.bu
bulang-web/boids/: boids.data  boids.js  boids.wasm  index.html
bulang-web/cradle/: cradle.data  cradle.js  cradle.wasm  index.html
bulang-web/doom/: doom.data  doom.html  doom.js
bulang-web/fireworks/: fireworks.data  fireworks.js  fireworks.wasm  index.html
bulang-web/physics/: index.html  physycs.js
bulang-web/pinball/: index.html  pinball.data  pinball.js
bulang-web/shooter/: index.html  shooter.js
bulang-web/src/: main.cpp  web_stubs.cpp  webapi.cpp
bulang-web/verlet/: index.html  verlet.js
bulang/extension/: package.json
bulang/extension/syntaxes/: bulang.tmLanguage.json
bulang/include/: Arena.hpp  Ast.hpp  Interpreter.hpp  Lexer.hpp  Parser.hpp  Token.hpp  Value.hpp
bulang/include/std/: Chars.hpp  Config.hpp  String.hpp  Vector.hpp
bulang/src/: Arena.cpp  Ast.cpp  ByteGenerator.cpp  Compiler.cpp  Disassemble.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  Utils.cpp  Utils.hpp  Value.cpp  main.cpp  pch.h
compilerTest/: CMakeLists.txt
compilerTest/src/: main.cpp
demos/: data_pipeline.bu  hex_viewer.bu  http_client.bu  password_gen.bu  text_analyzer.bu  todo.bu
divgraphics/: CMakeLists.txt
docs/: BUILTINS.md  CPP_SCRIPT_INTEROP.md  Makefile  NATIVE_BINDINGS.md  TRY_CATCH_LIMITATIONS.md
docs/builtins/: array.md  base.md  crypto.md  file.md  fs.md  json.md  math.md  nn.md  os.md  path.md  regex.md  socket.md  time.md  zip.md
docs/source/: bulang_lexer.py  conf.py  index.rst  syntax.rst
engine/: CMakeLists.txt
engine/src/: bidings.cpp  main.cpp
game/: CMakeLists.txt
game/src/: bidings.cpp  bidings.hpp  main.cpp
gtest/: test_compiler.hpp  test_gc.cpp  test_interpreter.hpp  test_interpreter_runtime_switch.cpp  test_lexer.hpp  test_list.hpp  test_map.hpp  test_ordermap.hpp  test_set.hpp  test_value.hpp  test_vector.hpp
include/: Parser.hpp  Vm.hpp
libbu/: CMakeLists.txt
libbu/include/: arena.hpp  compiler.hpp  config.hpp  debug.hpp  interpreter.hpp  list.hpp  opcode.hpp  ordermap.hpp  platform.hpp  pool.hpp  stdlib_embedded.h  string.hpp  token.hpp  types.hpp  value.hpp  vector.hpp
libbu/src/: arena.cpp  builtins_base.cpp  builtins_file.cpp  builtins_fs.cpp  builtins_math.cpp  builtins_net.cpp  builtins_nn.cpp  builtins_os.cpp  builtins_path.cpp  builtins_time.cpp  code.cpp  compiler.cpp  compiler_expressions.cpp  compiler_statements.cpp  debug.cpp  function.cpp  gc.cpp  interpreter.cpp  interpreter_process.cpp  interpreter_runtime_goto.cpp  interpreter_runtime_switch.cpp  interpreter_stack.cpp  lexer.cpp  module.cpp  platform.cpp  pool.cpp  token.cpp  value.cpp
main/: CMakeLists.txt
main/src/: main.cpp
natives/: CMakeLists.txt
natives/src/: main.cpp
scripts/: benchmark.bu  benchmark.py  bunny.bu  bunnys.py  demo_advanced_battle.bu  demo_assimp.bu  demo_assimp_animation.bu  demo_audio.bu  demo_batch_particles.bu  demo_bloom_hdr.bu  demo_box2d_edge_chain.bu  demo_box2d_mouse_joint.bu  demo_box2d_stack.bu  demo_chipmunk_joints.bu  demo_fake_engine_inspector.bu  demo_imgui.bu  demo_jolt_constraints.bu  demo_jolt_motorcycle.bu  demo_jolt_simple.bu  demo_jolt_tank.bu  demo_jolt_tank_csm_particles.bu  demo_jolt_vehicle_wheeled.bu  demo_legacy_shader.bu  demo_mandelbrot.bu  demo_micropather.bu  demo_neon_wave.bu  demo_ode_car.bu  demo_ode_fall.bu  demo_ode_fall3d.bu  demo_opensteer_boids.bu  demo_opensteer_path.bu  demo_opensteer_pedestrians.bu  demo_particles.bu  demo_phong.bu  demo_process_ticks_legacy.bu  demo_raymarching.bu  demo_raytrace.bu  demo_recast_navmesh.bu  demo_recast_tilecache.bu  demo_shader_hotreload.bu  (+84 more)
scripts/tests/: test_arrays_maps.bu  test_bytecode.bu  test_class_stress.bu  test_classes.bu  test_closures_stress.bu  test_control_flow.bu  test_docs_crypto.bu  test_docs_fs.bu  (+32 more)
src/: Lexer.cpp  Parser.cpp  Process.cpp  Task.cpp  Vm.cpp  main.cpp
testCBiding/: CMakeLists.txt
testParser/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  test_edge_cases.bu
tests/src/: bench_minimal.cpp  benchmark.cpp  benchmark.py  main.cpp  main_increment_tests.cpp  perf.cpp  test_bindings.cpp  test_native_binding.cpp
visualTest/: CMakeLists.txt  main.cpp  test_processes.bu  test_processes.buc  test_stress_fps.bu
(+273 files in other folders)
